--- a/project/wongping2.css
+++ b/project/wongping2.css
@@ -4,20 +4,26 @@
   }
   
   .container{
-    color:#000000;
+    color:#FFFFFF;
     font-size:15px;
     text-decoration:none;
+    
   }
-  
-  .title{
+
+.title{
     text-align: center;
-  }
-  
-  ul {
+}
+
+.intro{
+    text-align: center;
+}
+
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    text-align: center;
   
   }
   
@@ -28,8 +34,7 @@
   li a {
     display: block;
     color:#ffcc00;
-    text-align: center;
-    padding: 16px;
+    padding: 10px;
     text-decoration: none;
   }
   
@@ -37,21 +42,3 @@
     background-color: #111111;
   }
 
-#menu-outer {
-	height: 84px;
-	background: url(images/bar-bg.jpg) repeat-x;
-}
-
-.table {
-	display: table;   /* Allow the centering to work */
-	margin: 0 auto;
-}
-
-ul#horizontal-list {
-	min-width: 696px;
-	list-style: none;
-	padding-top: 20px;
-	}
-	ul#horizontal-list li {
-		display: inline;
-	}
