--- a/project/wongping.css
+++ b/project/wongping.css
@@ -8,6 +8,35 @@
     font-size:15px;
     text-decoration:none;
   }
+
+  
+.round-wrapper {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  position: absolute;
+  
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: rgba(0, 255, 255, .3);
+    transform: scale(0);
+    transition: transform .25s .25s ease;
+  }
+}
+
+.round-wrapper:hover {
+  &:after {
+    transform: scale(1);
+    transition: transform .25s ease;
+  }
+}
+  
   
   .title{
     text-align: center;
@@ -19,12 +48,12 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    text-align: center;
+    text-align: left;
   
   }
   
   li {
-    float: center;
+    float: left;
   }
   
   li a {
@@ -47,12 +76,37 @@
 
 
 .img{
-  height:195px;
-  width:295px;
+  position:relative;
+  width:100%;
+  }
 
+
+
+
+.round-wrapper {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  position: absolute;
+  
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: rgba(0, 255, 255, .3);
+    transform: scale(0);
+    transition: transform .25s .25s ease;
+  }
 }
 
-. table :hover {
-  border: 20px solid #ff5400;
-  padding: 0px;
+.round-wrapper:hover {
+  &:after {
+    transform: scale(1);
+    transition: transform .25s ease;
   }
+}
+  
